--- a/AndroidStudio/assignments/fundamentals/5th/InteractionCallbackAssignment1/app/src/main/res/values/strings.xml
+++ b/AndroidStudio/assignments/fundamentals/5th/InteractionCallbackAssignment1/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="app_name">InteractionCallbackAssignment1</string>
     <string name="action_settings">Settings</string>
+    <string name="action_refresh">Refresh</string>
     <string name="hello_world">Hello world!</string>
 
 </resources>
